k8s/network-policy/core-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: core-network-policy
  namespace: core
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: core
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: info
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: core
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: info
