k8s/network-policy/info-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: info-network-policy
  namespace: info
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: info
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: core
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: channel
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: info
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: core
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: channel
  - to:
    - ipBlock:
        cidr: 192.168.49.1/32
    ports:
    - port: 11434
      protocol: TCP
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
